--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "실수> 3.14\n"
@@ -61,8 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "30e6d3ec-45a6-4b3f-834c-1ea7dbd24e6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b3589d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -70,7 +88,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pyt1",
    "language": "python",
    "name": "python3"
   },
@@ -84,7 +102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
